--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
     "nette/php-generator": "^4.0"
   },
   "autoload": {
+    "files": [
+      "src/helpers.php"
+    ],
     "psr-4": {
       "Infira\\Collection\\": "src"
     }
