--- a/composer.json
+++ b/composer.json
@@ -1,40 +1,36 @@
 {
-  "name": "infira/laravel-collection-extensions",
+  "name": "infira/follection",
   "description": "Extensions for Laravel's Collection class.",
   "keywords": [
     "laravel",
-    "laravel-collection-extensions",
+    "laravel collection extensions",
     "infira"
   ],
   "type": "library",
   "require": {
-    "php": ">=8.0",
-    "illuminate/support": "^9.22"
+    "php": ">=8.1"
   },
-  "require-dev": {
-    "phpunit/phpunit": "^9.5",
-    "nette/php-generator": "^4.0"
+  "suggest": {
+    "illuminate/support": "^9.22",
+    "infira/fluent-value": "make use of Handles\\Field"
   },
   "autoload": {
     "psr-4": {
-      "Infira\\Collection\\": "src"
-    },
-    "files": [
-      "src/helpers/helpers.php"
-    ]
+      "Infira\\Follection\\": "src"
+    }
   },
   "license": "MIT",
   "authors": [
     {
       "name": "Gen taliaru",
       "email": "gen.infira@gmail.ee",
-      "homepage": "https://github.com/infira/laravel-collection-extensions",
+      "homepage": "https://github.com/infira/follection",
       "role": "Developer"
     }
   ],
   "support": {
-    "source": "https://github.com/infira/laravel-collection-extensions",
-    "docs": "https://github.com/infira/laravel-collection-extensions",
+    "source": "https://github.com/infira/follection",
+    "docs": "https://github.com/infira/follection",
     "email": "gen.infira@gmail.ee"
   },
   "minimum-stability": "stable"
